# steamshim

./: .gitignore  CMakeLists.txt  make.sh  steamshim.vcxproj  steamshim_parent.cpp
.github/workflows/: build.yaml  cmake_build.yaml  windows.yaml
msvc/: msvc.sln
